--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="home__img">
-          <img src="/images/website_pic_adobespark.png" alt="" />
+          <img src="/images/website.png" alt="" />
         </div>
       </section>
 
