Removed unnecessary information

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         <div class="home__data">
           <h1 class="home__title">
             Hi,<br />I'am <span class="home__title-color">Teja Illa</span><br />
-            Incoming SDE at <br />
-            Workspot
+            Currently working as Software Engineer<br />
           </h1>
 
           <a href="#contact" class="button">Contact</a>
@@ -74,10 +73,6 @@
             ><i class="bx bxl-github"></i
           ></a>
         </div>
-
-        <div class="home__img">
-          <img src="/images/website.png" alt="" />
-        </div>
       </section>
 
       <!--===== ABOUT =====-->
@@ -92,9 +87,6 @@
               Passionate Software Developer interested in the areas of Machine Learning,Full Stack Development,Cloud and Devops.
               I am committed to produce high quality,user friendly,scalable and bug free robust code to handle large number 
               of users and to developed end to end features.
-            </p>
-            <p class="about__quote">
-              Design Develop Deploy 
             </p>
           </div>
         </div>
@@ -246,7 +238,6 @@
 
     <!--===== FOOTER =====-->
     <footer class="footer">
-      <p class="footer__title">Teja-Human by Nature,Engineer by Passion.</p>
       <div class="footer__social">
         <a href="#" class="footer__icon"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="footer__icon"><i class="bx bxl-instagram"></i></a>
