Modified Main section

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <section class="home bd-grid" id="home">
         <div class="home__data">
           <h1 class="home__title">
-            Hi,<br />My self <span class="home__title-color">Teja Illa</span><br />
-            and I am a Passionate Software Developer interested in the areas of Distributed Systems, Backend development, Database Management and committed to produce high quality,scalable and bug free code.<br />
+            Hi,<br />I'm <span class="home__title-color">Teja Illa</span><br />
+            a Software Engineer interested in Backend development.<br />
           </h1>
 
           <a href="#contact" class="button">Contact</a>
@@ -85,7 +85,6 @@
             <p class="skills__text">
               Below are the list of Languages , Frameworks , Libraries which I have worked
             </p>
-
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bx-code-alt skills__icon'></i>                
@@ -94,8 +93,6 @@
               <div class="skills__bar skills__js"></div>
             </div>
           </div>
-
-
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bxl-spring-boot skills__icon'></i>
@@ -103,8 +100,6 @@
               </div>
               <div class="skills__bar skills__js"></div>
             </div>
-
-
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bxs-data skills__icon'></i>                
@@ -112,7 +107,6 @@
               </div>
               <div class="skills__bar skills__js"></div>
             </div>
-
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bxl-git skills__icon'></i>                
@@ -120,7 +114,6 @@
               </div>
               <div class="skills__bar skills__js"></div>
             </div>
-
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bxs-chevrons-right skills__icon'></i>                
@@ -128,7 +121,6 @@
               </div>
               <div class="skills__bar skills__js"></div>
             </div>
-
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bxs-graduation skills__icon'></i>                
@@ -195,9 +187,9 @@ SpringBoot,RabbitMQ, Azure</li>
 </li>
             <li >Sleuth and Zipkin fortraceability, Twilio for SMS notifications and
 Resilience4j forimplementing circuit breaker pattern</li>
-            <li >Put Github Link here</li>
+            <li ><a href="https://github.com/teja0404/CoffeeShop">Github</a></li>
           </ul>
-          <a href="https://github.com/teja0404/CoffeeShop">Github</a>
+          
           <br />
 
           <h2 class="work__subtitle">APIGATEWAY-SERVICEREGISTRY APPLICATION</h2>
@@ -205,8 +197,9 @@ Resilience4j forimplementing circuit breaker pattern</li>
             <li >About: Implemented an API Gateway, which acts like a single entry point for all incoming requests and routes traffic to different services</li>
             <li >It also has a centralized service registry component keeps track of all available microservices, automatic registration and deregistration of services</li>
             <li > Techstack: ReactJS, SpringBoot framework and HTTP communication between services</li>
+            <li ><a href="https://github.com/teja0404/APIGateway-ServiceRegistry">Github Link</a></li>
           </ul>
-          <a href="https://github.com/teja0404/APIGateway-ServiceRegistry">Github Link</a>
+          
         </div>
       </section>
 
