Modified Main sectin

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a href="#skills" class="nav__link">Skills</a>
             </li>
             <li class="nav__item">
-              <a href="#work" class="nav__link">Work</a>
+              <a href="#work" class="nav__link">Work Experience</a>
             </li>
             <li class="nav__item">
               <a href="#projects" class="nav__link">Projects</a>
@@ -52,7 +52,7 @@
         <div class="home__data">
           <h1 class="home__title">
             Hi,<br />I'm <span class="home__title-color">Teja Illa</span><br />
-            a Software Engineer interested in building applications.<br />
+            a Software Engineer interested in building enterprise applications.<br />
           </h1>
 
           <a href="#contact" class="button">Contact</a>
@@ -124,7 +124,7 @@
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bxs-graduation skills__icon'></i>                
-                <span class="skills__name">Data Structures And Algorithms , OOPS, Database Systems</span>
+                <span class="skills__name">Data Structures And Algorithms , OOPS, Database Management</span>
               </div>
               <div class="skills__bar skills__js"></div>
             </div>
