--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teja's Portfolio</title>
+    <title>Ashok's Portfolio</title>
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/styles.css" />
     <link
@@ -16,7 +16,7 @@
     <header class="l-header">
       <nav class="nav bd-grid">
         <div>
-          <a href="#" class="nav__logo">Illa Durga Vara Siva Teja</a>
+          <a href="#" class="nav__logo">Ashok Kesana</a>
         </div>
 
         <div class="nav__menu" id="nav-menu">
@@ -51,7 +51,7 @@
       <section class="home bd-grid" id="home">
         <div class="home__data">
           <h1 class="home__title">
-            Hi,<br />I'm <span class="home__title-color">Teja Illa</span><br />
+            Hi,<br />I'm <span class="home__title-color">Ashok Kesana</span><br />
             a Software Engineer interested in building enterprise applications.<br />
           </h1>
 
@@ -64,11 +64,7 @@
             class="home__social-icon"
             ><i class="bx bxl-linkedin"></i
           ></a>
-          <a
-            href="https://www.facebook.com/teja.illa.1"
-            class="home__social-icon"
-            ><i class="bx bxl-facebook-square"></i
-          ></a>
+          
           <a href="https://github.com/teja0404" class="home__social-icon"
             ><i class="bx bxl-github"></i
           ></a>
@@ -88,7 +84,7 @@
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bx-code-alt skills__icon'></i>                
-                <span class="skills__name">Java, C++, Python</span>
+                <span class="skills__name">Python</span>
               </div>
               <div class="skills__bar skills__js"></div>
             </div>
