changed the title

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="home__data">
           <h1 class="home__title">
             Hi,<br />I'm <span class="home__title-color">Ashok Kesana</span><br />
-            a Software Engineer interested in building enterprise applications.<br />
+            Test engineer dedicated to ensuring the quality and reliability of software products through meticulous testing, test automation, and continuous improvement<br />
           </h1>
 
           <a href="#contact" class="button">Contact</a>
