--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
         <div class="home__social">
           <a
-            href="https://www.linkedin.com/in/teja-illa-08a132149/"
+            href="https://www.linkedin.com/in/ashok-kesana-54bb076a/"
             class="home__social-icon"
             ><i class="bx bxl-linkedin"></i
           ></a>
           
-          <a href="https://github.com/teja0404" class="home__social-icon"
+          <a href="https://github.com/askesana" class="home__social-icon"
             ><i class="bx bxl-github"></i
           ></a>
         </div>
@@ -84,16 +84,12 @@
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bx-code-alt skills__icon'></i>                
-                <span class="skills__name">Python</span>
+                <span class="skills__name">Python, Powershell</span>
               </div>
               <div class="skills__bar skills__js"></div>
             </div>
           </div>
-            <div class="skills__data">
-              <div class="skills__names">
-                <i class='bx bxl-spring-boot skills__icon'></i>
-                <span class="skills__name">Spring Boot</span>
-              </div>
+            
               <div class="skills__bar skills__js"></div>
             </div>
             <div class="skills__data">
@@ -120,7 +116,7 @@
             <div class="skills__data">
               <div class="skills__names">
                 <i class='bx bxs-graduation skills__icon'></i>                
-                <span class="skills__name">Data Structures And Algorithms , OOPS, Database Management</span>
+                <span class="skills__name">Azure, GCP, AWS, Networking, Storage, Virtualisation</span>
               </div>
               <div class="skills__bar skills__js"></div>
             </div>
